--- a/pagina.html
+++ b/pagina.html
@@ -1,12 +1,20 @@
-<!DOCTYPE>
-<html lng="pt-br">
-<header>
+<html lng="pt-br"><head></head><body style="text-align:center;"><header>
+<meta charset="UTF-8">
 <title>Pagina Nginx</title>
 </header>
-<body style="text-align:center;" >
 
-<h1>Pagina Nginx</h1>
-<p>Servidor Nginx Funcionando</p>
+<main>
+<h1>Sobre o projeto</h1>
+<p>Este projeto foi realizado com o intuito de demonstrar conhecimentos sobre nginx e linux, sendo feito de forma local.</p>
+<h2>Principais objetivos</h2>
+<lu>
+	<li>Instalação do Nginx</li>
+	<li>Criação de script de monitoramento de erros que armazene logs</li>
+	<li>Documentação de processos</li>
+</lu>
+<h2>O que é Nginx?</h2>
+<p>O Nginx é um servidor web usado para hospedagem de sites e aplicações na internet, que pode ser utilizado como prozy reverso e balanceador de carga. <br> Quando um site é acessado o navegador envia uma solicitação ao servidor que redireciona o trafego para outros servidores.</p>
+
+</main>
 </body>
-
 </html>
